src/components/header/page.module.css
.header{
    position: relative;
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 96%;
    height: 45px;
    text-transform: uppercase;
    margin-top: 0;
}
.directions-container{
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 7%;
}

.routers{
    background-color: transparent;
    border: none;
    width: 22px;
    font-size: 22px;
}

.nav_ul{
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 50%;
}
.li_item{
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
    text-transform: uppercase;
}
.next_Link{
    text-decoration: none;
    color: white;
    text-decoration: none;
}
.next_Link:hover{
    background-color: #07637a;
    color: white;
}
.next_button{
    color: white;
    background-color: transparent;
}
.toggler_header{
    display: none;
}

/* background */

.background_setter{
    position: relative;
    background-image: linear-gradient(blue,green,red);
    border-radius: 11px;
    color: black;
    font-weight: bold;
    width: 145px;
    height: 30px;
    z-index: 101;
    text-align: center;
}

.background_inner{
    position: absolute;
    display: none;
    align-items: flex-start;
    justify-content: space-between;
    flex-direction: column;
}
.background_setter:hover .background_inner{
    display: flex;
}
.color_button{
    width:120px
}
.responsive_mobile{
    position: absolute;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
    height: 25vh;
    width: 120px;
    background-color: purple;
    right: 0;
    top: 25px;
}
.responsive_mobile_dis{
    display: none;
}
/* responsive */
@media (max-width:1200px){
   
       .nav_ul{
        width: 65%;
    }
}

@media (max-width:800px){
   
   
    .nav_ul{
        width: 100%;
        display: none;
        flex-direction: column;
    }
    .logout{
        display: none;
    }
    .switcher{
       position: absolute;
       right: 150px;
    }
    .toggler_header{
        display: block;
    }
    
}


/* background_styles */


/* restyling */
.header_M_logo{
    width: 80px;
    height: 80px;
    display: flex;
    align-items: center;
    justify-content: center;
    color: Green;
}

